--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,34 @@
 plugins {
-    id 'java-library'
+   id 'java-library'
 }
-
-repositories {
-    mavenCentral()
-}
-
 dependencies {
     testImplementation (
             "com.codeborne:selenide:6.12.4",
             "org.junit.jupiter:junit-jupiter:5.9.2")
 }
-
-tasks.withType(JavaCompile) {
-    options.encoding = 'UTF-8'
+repositories {
+    mavenCentral()
 }
 
-test {
-    useJUnitPlatform()
-}
+
+//plugins {
+//    id 'java-library'
+//}
+//
+//repositories {
+//    mavenCentral()
+//}
+//
+//dependencies {
+//    testImplementation (
+//            "com.codeborne:selenide:6.12.4",
+//            "org.junit.jupiter:junit-jupiter:5.9.2")
+//}
+//
+//tasks.withType(JavaCompile) {
+//    options.encoding = 'UTF-8'
+//}
+//
+//test {
+//    useJUnitPlatform()
+//}
