--- a/build.gradle
+++ b/build.gradle
@@ -4,31 +4,14 @@ plugins {
 dependencies {
     testImplementation (
             "com.codeborne:selenide:6.12.4",
-            "org.junit.jupiter:junit-jupiter:5.9.2")
+            "org.junit.jupiter:junit-jupiter:5.9.2"
+    )
+    implementation (
+            "org.slf4j:slf4j-simple:2.0.7")
 }
 repositories {
     mavenCentral()
 }
-
-
-//plugins {
-//    id 'java-library'
-//}
-//
-//repositories {
-//    mavenCentral()
-//}
-//
-//dependencies {
-//    testImplementation (
-//            "com.codeborne:selenide:6.12.4",
-//            "org.junit.jupiter:junit-jupiter:5.9.2")
-//}
-//
-//tasks.withType(JavaCompile) {
-//    options.encoding = 'UTF-8'
-//}
-//
-//test {
-//    useJUnitPlatform()
-//}
+test {
+    useJUnitPlatform()
+}
