--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,10 @@
 plugins {
-   id 'java-library'
+    id 'java-library'
 }
 dependencies {
-    testImplementation (
-            "com.codeborne:selenide:6.12.4",
-            "org.junit.jupiter:junit-jupiter:5.9.2"
-    )
-    implementation (
-            "org.slf4j:slf4j-simple:2.0.7")
+    testImplementation("com.codeborne:selenide:6.12.4",
+            "org.junit.jupiter:junit-jupiter:5.9.2")
+    implementation("org.slf4j:slf4j-simple:2.0.7")
 }
 repositories {
     mavenCentral()
