--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ dependencies {
     testImplementation("com.codeborne:selenide:6.13.0",
             "org.junit.jupiter:junit-jupiter:5.9.2")
     implementation("org.slf4j:slf4j-simple:2.0.7")
+    implementation 'com.github.javafaker:javafaker:1.0.2'
 }
 repositories {
     mavenCentral()
