--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,65 @@
 plugins {
     id 'java-library'
+    id 'io.qameta.allure' version '2.11.2'
 }
-dependencies {
-    testImplementation("com.codeborne:selenide:6.13.0",
-            "org.junit.jupiter:junit-jupiter:5.9.2")
-    implementation("org.slf4j:slf4j-simple:2.0.7")
-    implementation 'com.github.javafaker:javafaker:1.0.2'
-}
+
 repositories {
     mavenCentral()
 }
+
+
+
+def selenideVersion = "6.14.1",
+    allureVersion = "2.22.0",
+    jUnitVersion = "5.9.3",
+    slf4jVersion = "2.0.7",
+    javaFakerVersion = "1.0.2"
+
+allure {
+    report {
+        version.set(allureVersion)
+    }
+    adapter {
+        aspectjWeaver.set(true)
+        frameworks {
+            junit5 {
+                adapterVersion.set(allureVersion)
+            }
+        }
+    }
+}
+
+dependencies {
+    testImplementation(
+            "com.codeborne:selenide:$selenideVersion",
+            "io.qameta.allure:allure-selenide:$allureVersion",
+            "com.github.javafaker:javafaker:$javaFakerVersion",
+            "org.junit.jupiter:junit-jupiter:$jUnitVersion",
+            "org.slf4j:slf4j-simple:$slf4jVersion"
+    )
+}
+
+tasks.withType(Test) {
+    testLogging {
+        lifecycle {
+            events "started", "skipped", "failed", "standard_error", "standard_out"
+            exceptionFormat "short"
+        }
+    }
+}
+
 test {
     useJUnitPlatform()
+}
+
+task simple_test(type: Test) {
+    useJUnitPlatform{
+        includeTags("simple")
+    }
+}
+
+task remote_test(type: Test) {
+    useJUnitPlatform{
+        includeTags("remote")
+    }
 }
